--- a/app/src/main/res/drawable/close.xml
+++ b/app/src/main/res/drawable/close.xml
@@ -1,9 +1,4 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
-  <path
-      android:fillColor="?colorPrimary"
-      android:pathData="M19,6.41L17.59,5 12,10.59 6.41,5 5,6.41 10.59,12 5,17.59 6.41,19 12,13.41 17.59,19 19,17.59 13.41,12z"/>
+<vector android:height="24dp" android:viewportHeight="512"
+    android:viewportWidth="352" android:width="17dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="?colorPrimary" android:pathData="M242.72,256l100.07,-100.07c12.28,-12.28 12.28,-32.19 0,-44.48l-22.24,-22.24c-12.28,-12.28 -32.19,-12.28 -44.48,0L176,189.28 75.93,89.21c-12.28,-12.28 -32.19,-12.28 -44.48,0L9.21,111.45c-12.28,12.28 -12.28,32.19 0,44.48L109.28,256 9.21,356.07c-12.28,12.28 -12.28,32.19 0,44.48l22.24,22.24c12.28,12.28 32.2,12.28 44.48,0L176,322.72l100.07,100.07c12.28,12.28 32.2,12.28 44.48,0l22.24,-22.24c12.28,-12.28 12.28,-32.19 0,-44.48L242.72,256z"/>
 </vector>
