--- a/app/src/main/res/drawable/reset.xml
+++ b/app/src/main/res/drawable/reset.xml
@@ -1,9 +1,4 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
-  <path
-      android:fillColor="?colorAccent"
-      android:pathData="M12,6v3l4,-4 -4,-4v3c-4.42,0 -8,3.58 -8,8 0,1.57 0.46,3.03 1.24,4.26L6.7,14.8c-0.45,-0.83 -0.7,-1.79 -0.7,-2.8 0,-3.31 2.69,-6 6,-6zM18.76,7.74L17.3,9.2c0.44,0.84 0.7,1.79 0.7,2.8 0,3.31 -2.69,6 -6,6v-3l-4,4 4,4v-3c4.42,0 8,-3.58 8,-8 0,-1.57 -0.46,-3.03 -1.24,-4.26z"/>
+<vector android:height="24dp" android:viewportHeight="512"
+    android:viewportWidth="512" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="?colorPrimary" android:pathData="M256.455,8c66.269,0.119 126.437,26.233 170.859,68.685l35.715,-35.715C478.149,25.851 504,36.559 504,57.941V192c0,13.255 -10.745,24 -24,24H345.941c-21.382,0 -32.09,-25.851 -16.971,-40.971l41.75,-41.75c-30.864,-28.899 -70.801,-44.907 -113.23,-45.273 -92.398,-0.798 -170.283,73.977 -169.484,169.442C88.764,348.009 162.184,424 256,424c41.127,0 79.997,-14.678 110.629,-41.556 4.743,-4.161 11.906,-3.908 16.368,0.553l39.662,39.662c4.872,4.872 4.631,12.815 -0.482,17.433C378.202,479.813 319.926,504 256,504 119.034,504 8.001,392.967 8,256.002 7.999,119.193 119.646,7.755 256.455,8z"/>
 </vector>
