--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
         android:scaleType="fitCenter"
-        android:src="@drawable/letters"
+        android:src="?app_title"
         android:contentDescription="@string/letters_description"
 
         app:layout_constraintTop_toBottomOf="@id/guideline20"
@@ -41,6 +41,28 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         style="@style/CornerButton" />
+
+    <ImageButton
+        android:id="@+id/scores_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/star"
+        android:contentDescription="@string/scores_description"
+
+        app:layout_constraintRight_toLeftOf="@id/bright_button"
+        app:layout_constraintTop_toTopOf="parent"
+        style="@style/CornerButton"/>
+
+    <ImageButton
+        android:id="@+id/bright_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/bright"
+        android:contentDescription="@string/bright_description"
+
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        style="@style/CornerButton"/>
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline20"
