--- a/app/src/main/res/layout/activity_memory_matcher.xml
+++ b/app/src/main/res/layout/activity_memory_matcher.xml
@@ -20,10 +20,26 @@
         android:id="@+id/score"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="16dp"
+        android:layout_marginEnd="16dp"
+        android:textSize="20sp"
+        android:textColor="?colorPrimary"
+        android:fontFamily="@font/lobster"
 
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/card_recycler"/>
+
+    <ImageButton
+        android:id="@+id/shuffle_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/shuffle"
+        android:contentDescription="@string/shuffle_description"
+
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        style="@style/CornerButton"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/card_recycler"
