--- a/app/src/main/res/layout/fragment_win.xml
+++ b/app/src/main/res/layout/fragment_win.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="?colorPrimary"
     android:padding="16dp"
     android:orientation="vertical">
 
@@ -12,6 +13,9 @@
         android:layout_height="wrap_content"
         android:text="@string/win_message"
         android:layout_marginBottom="16dp"
+        android:textSize="40sp"
+        android:textColor="?colorAccent"
+        android:fontFamily="@font/lobster"
 
         android:layout_centerHorizontal="true"/>
 
@@ -19,9 +23,10 @@
         android:id="@+id/close_button"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:src="@drawable/close_accent"
+        android:src="@drawable/close"
         android:contentDescription="@string/close_description"
-        style="@style/PrimaryButton"
+        android:background="@drawable/accent_rounded"
+        android:elevation="3dp"
 
         android:layout_below="@id/win_message"
         android:layout_toStartOf="@id/mid"
@@ -39,7 +44,8 @@
         android:layout_height="60dp"
         android:src="@drawable/reset"
         android:contentDescription="@string/close_description"
-        style="@style/PrimaryButton"
+        android:background="@drawable/accent_rounded"
+        android:elevation="3dp"
 
         android:layout_below="@id/win_message"
         android:layout_toEndOf="@id/mid"
