--- a/app/src/main/res/layout/item_card.xml
+++ b/app/src/main/res/layout/item_card.xml
@@ -9,6 +9,7 @@
         android:id="@+id/hidden"
         android:layout_width="match_parent"
         android:layout_height="90dp"
+        android:elevation="3dp"
         android:src="@drawable/primary_rounded"/>
 
     <ImageView
