bonuses: configurable matches, grid size, additional changes

--- a/app/src/main/res/drawable/bright.xml
+++ b/app/src/main/res/drawable/bright.xml
@@ -1,9 +1,4 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
-  <path
-      android:fillColor="?colorPrimary"
-      android:pathData="M20,15.31l2.6,-2.6c0.39,-0.39 0.39,-1.02 0,-1.41L20,8.69V5c0,-0.55 -0.45,-1 -1,-1h-3.69l-2.6,-2.6c-0.39,-0.39 -1.02,-0.39 -1.41,0L8.69,4H5c-0.55,0 -1,0.45 -1,1v3.69l-2.6,2.6c-0.39,0.39 -0.39,1.02 0,1.41L4,15.3V19c0,0.55 0.45,1 1,1h3.69l2.6,2.6c0.39,0.39 1.02,0.39 1.41,0l2.6,-2.6H19c0.55,0 1,-0.45 1,-1v-3.69zM12,18c-3.31,0 -6,-2.69 -6,-6s2.69,-6 6,-6 6,2.69 6,6 -2.69,6 -6,6z"/>
+<vector android:height="24dp" android:viewportHeight="512"
+    android:viewportWidth="352" android:width="17dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="?colorPrimary" android:pathData="M96.06,454.35c0.01,6.29 1.87,12.45 5.36,17.69l17.09,25.69a31.99,31.99 0,0 0,26.64 14.28h61.71a31.99,31.99 0,0 0,26.64 -14.28l17.09,-25.69a31.989,31.989 0,0 0,5.36 -17.69l0.04,-38.35L96.01,416l0.05,38.35zM0,176c0,44.37 16.45,84.85 43.56,115.78 16.52,18.85 42.36,58.23 52.21,91.45 0.04,0.26 0.07,0.52 0.11,0.78h160.24c0.04,-0.26 0.07,-0.51 0.11,-0.78 9.85,-33.22 35.69,-72.6 52.21,-91.45C335.55,260.85 352,220.37 352,176 352,78.61 272.91,-0.3 175.45,0 73.44,0.31 0,82.97 0,176zM176,96c-44.11,0 -80,35.89 -80,80 0,8.84 -7.16,16 -16,16s-16,-7.16 -16,-16c0,-61.76 50.24,-112 112,-112 8.84,0 16,7.16 16,16s-7.16,16 -16,16z"/>
 </vector>
