--- a/app/src/main/res/layout/fragment_configure_size.xml
+++ b/app/src/main/res/layout/fragment_configure_size.xml
@@ -2,22 +2,48 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="?colorPrimary"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <TextView
+        android:id="@+id/match_num_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/match_num_label"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp"
+        style="@style/ConfigureLabelText"
+
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/match_num_recycler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="8dp"
 
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/match_num_label"
+        app:layout_constraintLeft_toLeftOf="parent"/>
+
+    <TextView
+        android:id="@+id/grid_size_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/grid_size_label"
+        android:layout_marginStart="16dp"
+        style="@style/ConfigureLabelText"
+
+        app:layout_constraintTop_toBottomOf="@id/match_num_recycler"
         app:layout_constraintLeft_toLeftOf="parent"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/grid_size_recycler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="8dp"
 
-        app:layout_constraintTop_toBottomOf="@id/match_num_recycler"
+        app:layout_constraintTop_toBottomOf="@id/grid_size_label"
         app:layout_constraintLeft_toLeftOf="parent"/>
 
 </android.support.constraint.ConstraintLayout>
