bonus: top score;  bug patches

--- a/app/src/main/res/layout/fragment_win.xml
+++ b/app/src/main/res/layout/fragment_win.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?colorPrimary"
-    android:padding="16dp"
+    android:padding="32dp"
     android:orientation="vertical">
 
     <TextView
@@ -12,8 +12,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/win_message"
-        android:layout_marginBottom="16dp"
         android:textSize="40sp"
+        android:textColor="?colorAccent"
+        android:fontFamily="@font/lobster"
+
+        android:layout_centerHorizontal="true"/>
+
+    <TextView
+        android:id="@+id/score_message"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/win_message"
+        android:layout_marginBottom="16dp"
+        android:textSize="20sp"
         android:textColor="?colorAccent"
         android:fontFamily="@font/lobster"
 
@@ -28,7 +39,7 @@
         android:background="@drawable/accent_rounded"
         android:elevation="3dp"
 
-        android:layout_below="@id/win_message"
+        android:layout_below="@id/score_message"
         android:layout_toStartOf="@id/mid"
         android:layout_marginEnd="16dp"/>
 
@@ -47,7 +58,7 @@
         android:background="@drawable/accent_rounded"
         android:elevation="3dp"
 
-        android:layout_below="@id/win_message"
+        android:layout_below="@id/score_message"
         android:layout_toEndOf="@id/mid"
         android:layout_marginStart="16dp"/>
 
